# speechbubble

./: .gitignore  CMakeLists.txt  Makefile  README.md  coirc.pro  speechbubble.pro
metacollector/: CMakeLists.txt
src/: channel.cc  channel.h  commands.cc  commands.h  config.cc  config.h  connection.cc  connection.h  context.cc  context.h  crashcatcher.cc  crashcatcher.h  format.cc  format.h  lineedit.cc  lineedit.h  macros.h  main.cc  main.h  mainwindow.cc  mainwindow.h  misc.cc  misc.h  user.cc  user.h  xml.cc  xml.h  xml_document.cc  xml_document.h  xml_node.cc  xml_node.h  xml_scanner.cc  xml_scanner.h
ui/: connectTo.ui  entrylist.ui  main.ui
